# testagent

./: .env.example  __init__.py  astra  belief_state.py  goal_extractor.py  intent_classifier.py  main.py  metacognition.py  perception.py  project.txt  pyproject.toml  requirements.txt  self_model.py  uncertainty.py  web_scanner.py  world_model.py
apps/cli/src/astra_cli/: __init__.py  __main__.py  command_palette.py  config.py  context.py  main.py  output.py  path_bootstrap.py
apps/tui/src/astra_tui/: __init__.py  app.py  keybindings.py  theme.py
engines/agent-engine/src/agent_engine/: __init__.py
engines/code-intelligence-engine/src/code_intelligence_engine/: __init__.py
engines/collaboration-engine/src/collaboration_engine/: __init__.py
engines/company-builder-engine/src/company_builder_engine/: __init__.py  analytics_team.py  backend_team.py  brand_designer.py  competitor_intelligence.py  customer_persona_builder.py  devops_team.py  documentation_team.py  engineering_manager.py  finance_modeler.py  frontend_team.py  growth_loop.py  launch_orchestrator.py  legal_checklist.py  market_research.py  marketing_team.py  mobile_team.py  product_discovery.py  product_manager.py  qa_team.py  sales_team.py  security_team.py  startup_strategy.py  support_team.py  ui_designer.py  ux_researcher.py
engines/evaluation-engine/src/evaluation_engine/: __init__.py
engines/identity-engine/src/identity_engine/: __init__.py  behavioral_contract.py  (+10 more)
storage/postgres/: schema.sql
storage/sqlite-local/: schema.sql
tests/: test_real_core.py
tools/: generate_project_txt.py
(+323 files in other folders)
