[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-command-os"
version = "0.1.0"
description = "ASTRA Command OS — Real-World Civilization-Scale Terminal AI Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "uvloop>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
tui = ["textual>=0.40.0"]
all = ["astra-command-os[dev,tui]"]

[project.scripts]
astra = "astra_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["apps/cli/src/astra_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
